--- a/ShoomShoom_Unity/Assets/WebGLTemplates/Full Screen With Loading/TemplateData/style.css
+++ b/ShoomShoom_Unity/Assets/WebGLTemplates/Full Screen With Loading/TemplateData/style.css
@@ -1,5 +1,5 @@
-body { padding: 0; margin: 0; overflow: hidden; }
-#unity-canvas { background: {{{ BACKGROUND_COLOR }}}; width: 100vw; height: 100vh; }
+body { padding: 0; margin: 0; overflow: hidden;  background: #000; }
+#unity-canvas {margin: auto; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);}
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 356px; height: 356px; background: url('game-logo.png') no-repeat center; background-size: 100% 100%; }
 #unity-progress-bar-empty { width: 356px; height: 18px; margin-top: 10px; margin-left: 6.5px; 
